SSC-904 fix overlapping close button and next button

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-bootstrap-3-3-7/less/modals-custom.less
@@ -39,10 +39,12 @@
     &--transparent {
         background-color: transparent;
     }
-    
+
     &--gallery {
         .modal-header {
             padding: 0;
+            position: relative;
+            z-index: 2;
         }
     }
 }
